hpps e classes instanciadas

--- a/C00/ex01/Makefile
+++ b/C00/ex01/Makefile
@@ -2,16 +2,16 @@ NAME = megaphone
 CC = g++
 CFLAGS = -Wall -Wextra -Werror -ggdb -std=c++98
 
-SRCS = megaphone.cpp \
+SRCS = Contact.cpp Phonebook.cpp main.cpp \
 
-HEADER = megaphone.hpp
+HEADER = Contact.hpp Phonebook.hpp \
 
 OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(CC) $(CFLAGS) -o $(NAME) $(OBJS)
+	$(CC) $(CFLAGS) -o $(HEADER) $(NAME) $(OBJS)
 
 %.o: %.cpp
 	@$(CC) $(CFLAGS) -c $< -o $@
