--- a/C00/ex01/Makefile
+++ b/C00/ex01/Makefile
@@ -10,8 +10,9 @@ OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
 
+
 $(NAME): $(OBJS)
-	$(CC) $(CFLAGS) -o $(HEADER) $(NAME) $(OBJS)
+	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
 
 %.o: %.cpp
 	@$(CC) $(CFLAGS) -c $< -o $@
